# nrf70

./: .gitignore  .gitmodules  Cargo.toml  gen.py  gen_wrapper.h  rust-toolchain.toml
.cargo/: config.toml
example/: Cargo.toml  memory.x
example/.cargo/: config.toml
example/src/: main.rs
fw/: bindings.rs
src/: commands.rs  config.rs  lib.rs  main.rs
src/messages/: mod.rs
src/messages/commands/: sys.rs
