[package]
name = "nrf70"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.1.0", features = ["nightly", "defmt", "integrated-timers"]}
embassy-time = { version = "0.1.0", features = ["nightly", "defmt", "defmt-timestamp-uptime"]}
embassy-sync = { version = "0.1.0" }
embassy-nrf = { version = "0.1.0", features = [ "nightly", "defmt", "nrf5340-app-s", "gpiote", "time-driver-rtc1", "unstable-traits", "unstable-pac" ]}
cortex-m = { version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features= ["print-defmt"] }
embedded-hal = "1.0.0-alpha.9"
futures = { version = "0.3.5", default-features = false }
heapless = "0.7.1"
static_cell = "1.0.0"

[patch.crates-io]
#embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev="2209bef4f22bf77d9d52cda0a0ea40485cc2747a"}
#embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev="2209bef4f22bf77d9d52cda0a0ea40485cc2747a"}
#embassy-time = { git = "https://github.com/embassy-rs/embassy", rev="2209bef4f22bf77d9d52cda0a0ea40485cc2747a"}
#embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev="2209bef4f22bf77d9d52cda0a0ea40485cc2747a"}
#embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev="2209bef4f22bf77d9d52cda0a0ea40485cc2747a"}
#embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev="2209bef4f22bf77d9d52cda0a0ea40485cc2747a"}
#embassy-macros = { git = "https://github.com/embassy-rs/embassy", rev="2209bef4f22bf77d9d52cda0a0ea40485cc2747a"}

embassy-embedded-hal = { path = "/home/dirbaio/embassy/embassy/embassy-embedded-hal" }
embassy-executor = { path = "/home/dirbaio/embassy/embassy/embassy-executor" }
embassy-time = { path = "/home/dirbaio/embassy/embassy/embassy-time" }
embassy-sync = { path = "/home/dirbaio/embassy/embassy/embassy-sync" }
embassy-futures = { path = "/home/dirbaio/embassy/embassy/embassy-futures" }
embassy-nrf = { path = "/home/dirbaio/embassy/embassy/embassy-nrf" }
embassy-macros = { path = "/home/dirbaio/embassy/embassy/embassy-macros" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
