[package]
name = "nrf70"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0-rc.1"
embedded-hal-async = "1.0.0-rc.1"
defmt = "0.3"
futures = { version = "0.3.28", default-features = false }
heapless = "0.7.16"
align-data = "0.1.0"
num_enum = { version = "0.6.1", default-features = false }
embassy-time = { version = "0.1.2" }