[package]
name = "nrf70"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
defmt = "0.3"
futures = { version = "0.3.28", default-features = false }
heapless = "0.8.0"
align-data = "0.1.0"
num_enum = { version = "0.7.2", default-features = false }
embassy-time = { version = "0.3.0" }
embassy-net-driver-channel = { version = "0.2.0" }
