[package]
name = "nrf70-example"
version = "0.1.0"
edition = "2021"

[dependencies]
nrf70 = { path = ".." }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.5.0" }
embassy-nrf = { version = "0.1.0", features = [
    "defmt",
    "nrf5340-app-s",
    "gpiote",
    "time-driver-rtc1",
    "unstable-pac",
] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "1.0.0-rc.1"
futures = { version = "0.3.28", default-features = false }
heapless = "0.8.0"
static_cell = "2.0.0"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
embedded-hal-async = "1.0.0"
align-data = "0.1.0"
num_enum = { version = "0.7.2", default-features = false }

[profile.dev]
debug = 2
opt-level = 's'
incremental = true
debug-assertions = true
overflow-checks = true

[profile.release]
debug = 2
lto = 'fat'
opt-level = 's'
codegen-units = 1
incremental = false
debug-assertions = false
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
opt-level = 0
codegen-units = 8
incremental = false
debug-assertions = false
overflow-checks = false

[profile.release.build-override]
debug = false
opt-level = 0
codegen-units = 8
incremental = false
debug-assertions = false
overflow-checks = false
